--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,10 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=7AF804BC49EF9A53DF881D901C6EE96F
+Description=Rat King of NYC
+ProjectName=Rat King
+CompanyName=T and T
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
